--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.0",
-    "react-final-form": "^6.5.3",
-    "react-redux": "^7.2.5",
     "axios": "^0.21.1",
     "final-form": "^4.20.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.3",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "tslint": "^6.1.3",
     "typescript": "^4.4.3",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "cd api && venv/bin/flask run --no-debugger",
+    "api": "cd api && venv/bin/flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "tslint 'src/**/*.{ts,tsx}'",
